--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Luis Lafuente I'm a property manager</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Venezuela</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Play soccer</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pembroke Pines, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I always have been interested in learning and working from this</p>
     </section>
 
     <footer id="footer">
